--- a/.screenrc
+++ b/.screenrc
@@ -5,14 +5,4 @@ shell -/usr/rcf/bin/bash
 screen 0
 screen -t ADMIN 1
 screen 2
-#
-# terminfo and termcap for nice 256 color terminal
-# allow bold colors - necessary for some reason
-# attrcolor b ".I"
-#
-# tell screen how to set colors. AB = background, AF=foreground
-# termcapinfo putty* 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
-# termcapinfo xterm* 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
-#
-# erase background with current bg color
-# defbce "on" 
+term "screen-256color"
