--- a/.screenrc
+++ b/.screenrc
@@ -1,8 +1,46 @@
-startup_message off
-# deflogin on
-defscrollback 1000
+startup_message "off"
+#
+# Give 2000 lines of scrollback buffer
+defscrollback 2000
+#
+# Um, use this shell, as a login shell ('-')
 shell -/usr/rcf/bin/bash
+#
+# Force a terminal type for screens.
+term "screen-256color"
+#
+# Force all new screens to start in home directory
+chdir
+#
+# Force detach when hangup received
+autodetach "on"
+#
+# Disable nethack messages (never played it, never will)
+nethack "off"
+#
+#    alwayslastline      - always display the hardstatus as the last line of the
+#                          terminal
+#    "%{= wk} %-Lw"      - change to a white background with grey-black text,
+#                          and print all the tab [w]indow numbers and titles in
+#                          the [L]ong format (ie with flags) upto ('-') the
+#                          current tab window
+#    "%{=b YK} %n%f %t " - change to bold yellow with black text, and print
+#                          the [n]umber of the current tab window, any [f]lags it
+#                          might have, and the [t]itle of the current tab window
+#                          (as set by shell)
+#    "%{-}%+Lw "         - revert to the previous color scheme (red on black)
+#                          and print all the tab [w]indow numbers and titles in
+#                          the [L]ong format (ie with flags) after ('+') the
+#                          current tab window.
+#    "%=%{= dd}"         - pad all the way to the right (since there is no text
+#                          that follows this) and revert to the [d]efault
+#                          background and [d]efault foreground colors, with no
+#                          ('= ') other effects.
+#
+hardstatus alwayslastline "%{= wk} %-Lw%{=b YK} %n%f %t %{-}%+Lw %=%{= dd}"
+#
+# Start my screens
+# For reference, syntax is: screen [opts] [n] [cmd [args]]
 screen 0
 screen -t ADMIN 1
 screen 2
-term "screen-256color"
