--- a/.liquidpromptrc
+++ b/.liquidpromptrc
@@ -57,7 +57,7 @@ LP_ENABLE_SHORTEN_PATH=1
 
 # Do you want to use the proxy detection feature ?
 # Recommended value is 1
-LP_ENABLE_PROXY=0
+LP_ENABLE_PROXY=1
 
 # Do you want to use the jobs feature ?
 # Recommended value is 1
@@ -129,5 +129,7 @@ LP_ENABLE_SSH_COLORS=0
 # Specify a list of complete and colon (":") separated paths in which, all vcs
 # will be disabled
 LP_DISABLED_VCS_PATH=""
+
+LP_ENABLE_RUNTIME=0
 
 # vim: set et sts=4 sw=4 tw=120 ft=sh:
