--- a/.screenrc
+++ b/.screenrc
@@ -43,6 +43,6 @@ hardstatus alwayslastline "%{= wk} %-Lw%{=b YK} %n%f %t %{-}%+Lw %=%{= dd}"
 # For reference, syntax is: screen [opts] [n] [cmd [args]]
 screen -t Chef 0
 screen -t AFS-Admin 1 ssh cairo
-screen -t cm-master 2 ssh rcf-cm-master
+screen -t cm-master 2 ssh dmz-command ssh rcf-cm-master
 screen -t General
 screen -t DMZ ssh dmz-command
